# Alternative-Inference-for-Clients-Video

./: .gitignore  CMakeLists.txt  README.md  client.cpp  server.cpp
my_utils/: CMakeLists.txt  Pool.cpp  Pool.hpp  distributed.hpp
